trunk:   - bugfixes in update and log implementation for svn:// protocol